--- a/trunk/sns4j/web/src/main/resources/errors_zh_CN.properties
+++ b/trunk/sns4j/web/src/main/resources/errors_zh_CN.properties
@@ -1,10 +1,10 @@
-﻿## Do NOT delete! Keep this line to avoid the native2ascii UTF-8 BOM bug. See #APF-639
+## Do NOT delete! Keep this line to avoid the native2ascii UTF-8 BOM bug. See #APF-639
 
 # -- validator errors --
-errors.required=${getText(fieldName)} 为必填项。
-errors.requiredField={0} 为必填项。
-errors.date=${getText(fieldName)} 不是有效的日期格式。
-errors.email=${email} 为无效邮件地址。
-errors.phone=${phoneNumber} 为无效电话号码。
-errors.zip=${postalcode} 为无效邮政编码。
-errors.twofields="确认密码" 字段与 "密码" 字段的值必须一致。
+errors.required=${getText(fieldName)} \u4e3a\u5fc5\u586b\u9879\u3002
+errors.requiredField={0} \u4e3a\u5fc5\u586b\u9879\u3002
+errors.date=${getText(fieldName)} \u4e0d\u662f\u6709\u6548\u7684\u65e5\u671f\u683c\u5f0f\u3002
+errors.email=${email} \u4e3a\u65e0\u6548\u90ae\u4ef6\u5730\u5740\u3002
+errors.phone=${phoneNumber} \u4e3a\u65e0\u6548\u7535\u8bdd\u53f7\u7801\u3002
+errors.zip=${postalcode} \u4e3a\u65e0\u6548\u90ae\u653f\u7f16\u7801\u3002
+errors.twofields="\u786e\u8ba4\u5bc6\u7801" \u5b57\u6bb5\u4e0e "\u5bc6\u7801" \u5b57\u6bb5\u7684\u503c\u5fc5\u987b\u4e00\u81f4\u3002
