--- a/sns4j/web/src/main/resources/errors_zh_TW.properties
+++ b/sns4j/web/src/main/resources/errors_zh_TW.properties
@@ -1,10 +1,10 @@
-﻿## Do NOT delete! Keep this line to avoid the native2ascii UTF-8 BOM bug. See #APF-639
+## Do NOT delete! Keep this line to avoid the native2ascii UTF-8 BOM bug. See #APF-639
 
 # -- validator errors --
-errors.required=${getText(fieldName)} 為必填項。
-errors.requiredField={0} 為必填項。
-errors.date=${getText(fieldName)} 不是有效日期格式。
-errors.email=${email} 為無效郵件地址。
-errors.phone=${phoneNumber} 為無效電話號碼。
-errors.zip=${postalcode} 為無效郵遞區號。
-errors.twofields="確認密碼" 欄位與 "密碼" 欄位的值必須一致。
+errors.required=${getText(fieldName)} \u70ba\u5fc5\u586b\u9805\u3002
+errors.requiredField={0} \u70ba\u5fc5\u586b\u9805\u3002
+errors.date=${getText(fieldName)} \u4e0d\u662f\u6709\u6548\u65e5\u671f\u683c\u5f0f\u3002
+errors.email=${email} \u70ba\u7121\u6548\u90f5\u4ef6\u5730\u5740\u3002
+errors.phone=${phoneNumber} \u70ba\u7121\u6548\u96fb\u8a71\u865f\u78bc\u3002
+errors.zip=${postalcode} \u70ba\u7121\u6548\u90f5\u905e\u5340\u865f\u3002
+errors.twofields="\u78ba\u8a8d\u5bc6\u78bc" \u6b04\u4f4d\u8207 "\u5bc6\u78bc" \u6b04\u4f4d\u7684\u503c\u5fc5\u9808\u4e00\u81f4\u3002
